--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,23 @@ body{
     /* padding-top: -30; */
 }
 
+.boxJJ{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+}
+
+.jj{
+    width: 100%;
+    filter: brightness(.5);
+    height: 100%;
+    object-fit: cover;
+}
+
 .botones{
     padding: 9px;
     border-radius: 80px;
@@ -22,7 +39,7 @@ body{
 }
 
 .botones a{
-    background-color: #0a2be9;
+    background-color: #c71524;
     padding: 9px;
     border-radius: 80px;
     -webkit-border-radius: 80px;
@@ -37,7 +54,8 @@ body{
 }
 
 .greetings{
-    font-size: 7rem;
+    z-index: 100;
+    font-size: 5rem;
     font-weight: 900;
 }
 .greetings > span{
@@ -49,7 +67,7 @@ body{
         text-shadow: 0 0 12px #39c6d6, 0 0 50px #39c6d6, 0 0 100px #39c6d6;
     }
     10%, 90%{
-        color: #111;
+        color: #ffffff;
         text-shadow: none;
     }
 }
